# phys-rs

./: ATTRIBUTION.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  deny.toml
.github/workflows/: audit.yml  ci.yml  quickstart.yml
benches/: mod.rs
benches/math/: vec3.rs
crates/psp-test/: Cargo.toml
crates/psp-test-macro/: Cargo.toml
crates/psp-test-macro/src/: lib.rs
crates/psp-test-macro/ui-tests/: crate.rs  crate.stderr  ignore.rs  should_panic.rs
crates/psp-test/src/: lib.rs
crates/psp-vfpu/: Cargo.toml
crates/psp-vfpu/src/: lib.rs
psp/: Cargo.toml  Psp.toml
psp/src/: main.rs
src/: lib.rs
src/math/: deref.rs  float2.rs  float3.rs  float4.rs  libm.rs  mod.rs  quat.rs  vec3.rs  vec4.rs
src/math/simd/: mod.rs  neon.rs  sse.rs  vfpu.rs
tests/: mod.rs
tests/math/: mod.rs  quat.rs  vec3.rs  vec4.rs
