[workspace]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
cfg_aliases = { version = "0.2.0", default-features = false }
libm = { version = "0.2.8", default-features = false }

[package]
name = "phys-rs"
version.workspace = true
edition.workspace = true
authors = ["Joshua Wood <me@sk83rjo.sh>"]
repository = "https://github.com/SK83RJOSH/phys-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "physics"]
categories = ["game-engines", "no-std"]

[dependencies]
libm = { workspace = true, optional = true }

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
# enable support for the standard library
std = []
# enable support for nightly features
nightly = []
# disable all support for simd
no-simd = []

[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
criterion = "0.5.1"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3.37"

[build-dependencies]
cfg_aliases.workspace = true

[lib]
bench = false

[[bench]]
name = "mod"
harness = false
