[package]
name = "psp-test-macro"
description = "Internal testing macro for psp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = [ "parsing", "proc-macro", "derive", "printing" ] }

[dev-dependencies]
psp-test = { path = "../psp-test" }
trybuild = "1.0"
