[package]
name = "psp-test"
description = "Internal testing for psp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
linkme = { version = "0.3.22", features = ["used_linker"] }
psp = { workspace = true }
psp-test-macro = { path = "../psp-test-macro" }

[lib]
test = false
